--- a/configs/training/v1/image_finetune.yaml
+++ b/configs/training/v1/image_finetune.yaml
@@ -1,7 +1,7 @@
 image_finetune: true
 
 output_dir: "outputs"
-pretrained_model_path: "models/StableDiffusion/diffusion_pytorch_model.fp16.safetensors"
+pretrained_model_path: "models/StableDiffusion/stable-diffusion-v1-5"
 
 noise_scheduler_kwargs:
   num_train_timesteps: 1000
